--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,18 @@
-dsfds
-d
-f
-d
-d
-f
-ds
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<title>分析HTML5中WebSocket的原理</title>
+
+<meta name="keywords" content="HTML5,WebSocket"/>
+
+
+</head>
+
+<body>
+	dsfdsf
+	dsfdsfsdf
+</body>
+
+</html>
